// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent-framework-deploy - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Deploy AI agents and workflows built with Microsoft Agent Framework SDK to Microsoft Foundry.",
  "extractedKeywords": [
    "agent",
    "agents",
    "azure",
    "built",
    "cli",
    "container",
    "deploy",
    "foundry",
    "framework",
    "identity",
    "microsoft",
    "with",
    "workflows",
  ],
  "name": "agent-framework-deploy",
}
`;

exports[`agent-framework-deploy - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "azure",
  "built",
  "cli",
  "container",
  "deploy",
  "foundry",
  "framework",
  "identity",
  "microsoft",
  "with",
  "workflows",
]
`;
